--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,78 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply font-poppins;
+  margin: 0;
+  padding: 0;
+  background-color: white;
+}
+.imgHome {
+  position: absolute;
+  z-index: -1;
+  right: 0;
+  top: 0;
+  min-width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.welcome {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+  color: white;
+}
+.firstTitle {
+  margin: 20px 0;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+  color: white;
+}
+
+.firstPhrase {
+  max-width: 800px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+  color: white;
+}
+
+.secondTitle {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+.secondPhrase {
+  font-size: 16px;
+  text-align: justify;
+}
+
+.carousel {
+  display: flex;
+  align-items: center;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.carouselContainer {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: hidden;
+  width: 100%; 
+}
+
+.carouselCard {
+  position: relative;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  margin: 10px;
+  width: 300px;
+  flex: 0 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.textHorseName {
+  text-shadow: 1px 1px 2px black;
+}
