--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,8 @@ body {
   z-index: -1;
   right: 0;
   top: 0;
-  min-width: 100%;
-  height: 100%;
+  max-width: 100%;
+  min-height: 100%;
   object-fit: cover;
 }
 .welcome {
@@ -56,7 +56,7 @@ body {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: hidden;
-  width: 100%; 
+  width: 100%;
 }
 
 .carouselCard {
@@ -71,8 +71,33 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 0.3s;
+}
+
+.carouselCard:hover {
+  scale: 102%;
 }
 
 .textHorseName {
   text-shadow: 1px 1px 2px black;
+  position: absolute;
+  color: #fff;
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: 600;
+  bottom: 0;
+  left: 0;
+  margin: 0 0 20px 30px;
+}
+
+.layout {
+  min-height: 100vh;
+  min-width: 100%;
+  background-image: url('/0_0.png');
+  background-size: cover;
+  background-position: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -10;
 }
